--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Vacunación</title>
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/PabloIbatore/FrontEnd-CSS/main/Imagenes/LogoPagWeb.svg" type="image/x-icon">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/PabloIbatore/FrontEnd-CSS/main/css/estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&display=swap" rel="stylesheet"> 
 </head>
 
